--- a/AVX/AVX.html
+++ b/AVX/AVX.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>AVX</h2>
 <img src="AVX.jpg"> <br>
-Series: series of one-shots and mini-series<br>
+1 issue 2012 Marvel<br>
 Illustrator: John Romita, Jr., Olivier Coipel, Adam Kubert<br>
-Writer: Jason Aaron, Brian Michael Bendis, Ed Brubaker, Jonathan Hickman, Matt Fraction<br>
-Publisher: 2012 Marvel<br>
+Writer: Jason Aaron, Brian Michael Bendis, Ed Brubaker, Jonathan Hickman, Matt Fraction
 <p>
 Avengers vs. X-Men (AVX) is a 2012 crossover event consisting of an eponymous limited series and numerous tie-in books. Despite receiving poor reviews from critics, Avengers vs. X-Men was a commercial success that topped the comic-book sales charts from April to October 2012. The repercussions of the storyline resulted in the new status quos of the Marvel Universe presented in the company's Marvel NOW! relaunch initiative.
 </p><p>
