--- a/AvatarTheLastAirbender/AvatarTheLastAirbender.html
+++ b/AvatarTheLastAirbender/AvatarTheLastAirbender.html
@@ -2,14 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Avatar The Last Airbender</title>
 </head>
 
 <body>
-<img src="Avatar1.jpg"> 
-<img src="AvatarTheLastAirbenderMovie.jpg">
-<p></p>
+<img src="AvatarTheLastAirbenderMovie.jpg"><br>
+TV Series 2005-2008 Nickelodeon
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AvatarTheLastAirbenderMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avatar1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Avatar: The Last Airbender (Avatar: The Legend of Aang in some regions) is an American animated television series that aired for three seasons on Nickelodeon. The series began in February 2005 and concluded with a two-hour episode titled Sozin's Comet in July 2008. 
 <p></p>
 Avatar: The Last Airbender is set in an Asiatic-like world in which some people can manipulate the classical elements with psychokinetic variants of the Chinese martial arts known as "bending". The series is presented in a style that combines anime with American cartoons and relies on the imagery of East-and-South Asian, Inuit, and New World societies. It follows the protagonist, twelve-year-old Aang and his friends, who must bring peace and unity to the world by ending the Fire Lord's war with three nations.
@@ -25,5 +41,17 @@ Avatar: The Last Airbender is set in a world—adjacent to a parallel spirit wor
 Only the Avatar has the ability to bend all four elements. The Avatar, who may be male or female, is an international arbiter whose duty is to maintain harmony among the four nations, and act as a mediator between humans and spirits. When the Avatar dies, their spirit is reincarnated into the next of the four nations in what is known as the Avatar cycle: the Fire Nation, Air Nomads, Water Tribe and Earth Kingdom. 
 <p></p>
 An Avatar is required to master each bending art, beginning with the element of their home nation, and proceeding to learn the others in the order of the Avatar cycle, starting at the age of sixteen. Avatars also possess the ability to enter a condition known as the Avatar State, in which they gain the knowledge and abilities of all past Avatars. Although it is when they are most powerful, if an Avatar were ever to be killed while in the Avatar State, the reincarnation cycle would end and the avatar would never again be reborn.
+</p><p>
+<li>Nickelodeon Avatar: The Rift (Dark Horse) 3 issues in 2014 - 2014
+<li>Nickelodeon Avatar: The Last Airbender - The Lost Adventures (Dark Horse) 1 issue in 2011
+<li>Nickelodeon Avatar: The Last Airbender - The Promise (Dark Horse) 3 issues in 2012 - 2012
+<li>Nickelodeon Avatar: The Last Airbender - Smoke and Shadow [b] (Dark Horse) 3 issues in 2015 - 2016
+<li>Nickelodeon Avatar: The Last Airbender - The Search (Dark Horse) 3 issues in 2013 - 2013
+<li>Nickelodeon Avatar: The Last Airbender - North and South [b] (Dark Horse) 3 issues in 2016 - 2017
+<li>Nickelodeon Avatar: The Last Airbender - Imbalance [b] (Dark Horse) 2 issues in 2018 - Present
+<li>Nickelodeon Avatar: The Last Airbender - The Promise Library Edition (Dark Horse) 2012
+<li>Nickelodeon Avatar: The Last Airbender - North and South Library Edition [b] (Dark Horse) 2017
+<li>One for One: Nickelodeon Avatar: The Last Airbender - The Rift (Dark Horse) 1 issue in 2014
+
 </body>
 </html>
