--- a/Avengers1959/Avengers1959.html
+++ b/Avengers1959/Avengers1959.html
@@ -2,17 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Avengers 1959</title>
 </head>
 
 <body>
-<h2>the Avengers 1959</h2>
 <img src="Avengers1959.jpg"> <br>
-Creator: Howard Chaykin<br>
-Series: 5 issue mini series 2011, 1 collection TPB 2012<br>
-Publisher: Marvel<br>
+5 issues 2011, 1 collection TPB 2012 by Marvel<br>
+Creator: Howard Chaykin
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avengers1959_05.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Avengers 1959 is a 2011 five issue comic book miniseries written and drawn by Howard Chaykin. The story takes place in 1959 and concerns Nick Fury leading an early incarnation of the Avengers whom hunt down Nazi war criminals who escaped justice after World War II. The team consists of Nick Fury, Dum Dum Dugan, Sabretooth, Dominic Fortune, Namora, Kraven the Hunter, Ulysses Bloodstone, Silver Sable and the Blonde Phantom.
 </p><p>
 In Latveria, the Blonde Phantom is working undercover to discover a supposed secret Nazi plot. She is pretending to date a former Nazi general named Dieter Skul who was believed to have been killed during the war, but is alive and acting as a part of this plot. The general gets suspicious when he finds the Phantom snooping in his bedroom, but she flirts her way out of trouble. Meanwhile, Geoffrey Sydenham is in Wakanda to develop a covert diplomatic relationship between the African nation and the United States, though it becomes apparent that all is not as it seems.
