--- a/AvengersInvaders/AvengersInvaders.html
+++ b/AvengersInvaders/AvengersInvaders.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Avengers/Invaders</h2>
-<img src="AvengersInvaders.jpg"> <br>
-Series: on-going<br>
-Illustrator: Steve Sadowski, Alex Ross (cover)<br>
-Writer: Jim Krueger<br>
-Publisher: 2008 Marvel<br>
+<img src="AvengersInvaders.jpg"><br>
+13 issues 2008-2009 Marvel<br>
+Illustrator: Steve Sadowski, Alex Ross (cover), Writer: Jim Krueger
 <p>
 Legends Live Again. The original Invaders (Captain America , Bucky , Human Torch , Toro , and the Sub-Mariner) return in a twelve series by the award winning team behind EARTH X, Justice and Project Superpowers .
 </p><p>
