--- a/AvengersUltraforce/AvengersUltraforce.html
+++ b/AvengersUltraforce/AvengersUltraforce.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Avengers Ultraforce</h2>
 <img src="AvengersUltraforce.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Angel Medina, M.C. Wyman<br>
-Wraparound cover: George Perez<br>
-Writer: Glenn Herdling<br>
-Publisher: 1995 Marvel<br>
+1 issue 1995 Marvel<br>
+Illustrators: Angel Medina, M.C. Wyman<br>
+Cover by George Perez, Writer: Glenn Herdling
 <p>
 Story continues from Ultraforce Avengers Prelude 1. The Grandmaster joins the quest for the infinity gems. In the ancient elder's classic style he challenges Loki to a contest of champions. Loki's champions will be Ultraforce, and the Grandmaster's the Mighty Avengers.
 </p><p>
