--- a/AwYeahActionCat/AwYeahActionCat.html
+++ b/AwYeahActionCat/AwYeahActionCat.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Aw Yeah Comics Action Cat &amp; Adventure Bug</h2>
 <img src="AwYeahActionCat.jpg"> <br>
-Series: on-going<br>
-Illustrator: Art Baltazar<br>
-Writer: Art Baltazar, Franco<br>
-Publisher: 2016 Dark Horse<br>
+2016 Dark Horse<br>
+Illustrator: Art Baltazar, Writer: Art Baltazar, Franco<br>
 <p>
 Fresh from the creative minds at Aw Yeah Comics-a brand-new series starring the valiant Action Cat and his trusty sidekick, Adventure Bug!
 </p><p>
