--- a/AxeCop/AxeCop.html
+++ b/AxeCop/AxeCop.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Axe Cop</h2>
 <img src="AxeCop.jpg"> <br>
-Series: on-going<br>
-Illustrator: Ethan Nicolle<br>
-Writer: Malachai Nicolle<br>
-Publisher: Dark Horse<br>
+2010 Dark Horse<br>
+Illustrator: Ethan Nicolle, Writer: Malachai Nicolle
 <p>
 Bad guys, beware! Evil aliens, run for your lives! Axe Cop is here, and he's going to chop your head off! We live in a strange world, and our strange problems call for strange heroes. That's why Axe Cop, along with his partner Flute Cop and their pet T. rex Wexter, is holding tryouts to build the greatest team of heroes ever assembled. 
 </p><p>
