--- a/Avataars/Avataars.html
+++ b/Avataars/Avataars.html
@@ -2,18 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Avataars</title>
 </head>
 
 <body>
-<h2>Avataars</h2>
 <img src="Avataars.jpg"> <br>
-Series: 3 issue mini series<br>
-Illustrator: Oscar Jimenez, Eduardo Alpuente<br>
-Writer: Len Kaminski<br>
-Publisher: 2000 Marvel<br>
+3 issues 2000 Marvel<br>
+Illustrator: Oscar Jimenez, Eduardo Alpuente, Writer: Len Kaminski
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Avataars.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avataars2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avataars3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 The Marvel Universe meets Lord of the Rings and unleashes a new team of costumed adventurers.
 </p><p>
 In the far-off realm of Eurth, a deadly experiment is underway, one that could have dire ramifications for our world. There, in this place of fantasy and magic, the legendary Captain Avalon has gathered a band of hauntingly-familiar yet totally new characters to meeet the challenge of the Dreadlord!
