--- a/AvengersInfinityGauntlet/AvengersInfinityGauntlet.html
+++ b/AvengersInfinityGauntlet/AvengersInfinityGauntlet.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Avengers and the Infinity Gauntlet</h2>
 <img src="AvengersInfinityGauntlet.jpg"> <br>
-Series:4 issue mini series <br>
-Illustrator: Brian Churilla, Cover by Humberto Ramos<br>
-Writer: Brian Clevinger; Lee Black<br>
-Publisher: 2010 Marvel<br>
+4 issues 2010 Marvel<br>
+Illustrator: Brian Churilla, Cover by Humberto Ramos, Writer: Brian Clevinger; Lee Black
 <p>
 The evil Thanos has acquired the Infinity Gems, granting him control over the entire universe. He's destroyed half the population of all worlds. The only force standing in his way? The Avengers! But how can a ragtag group of heroes and villains overpower the unstoppable?
 </p>
