--- a/BPRDDarkWaters/BPRDDarkWaters.html
+++ b/BPRDDarkWaters/BPRDDarkWaters.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>BPRD Dark Waters</h2>
 <img src="BPRDDarkWaters.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Guy Davis<br>
-Writer: Brian Augustyn<br>
-Publisher: 2003 Dark Horse<br>
+1 issue 2003 Dark Horse<br>
+Illustrator: Guy Davis, Writer: Brian Augustyn
 <p>
 Abe Sapien and Roger the Homunculus find a small town in Massachusetts where the perfectly preserved bodies of three puritan witches have been uncovered in a drained pond. 
 </p><p>
