--- a/Badger/Badger.html
+++ b/Badger/Badger.html
@@ -2,23 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Badger</title>
 </head>
 
 <body>
-<h2>Badger</h2>
-<img src="Badger.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Jill Thompson<br>
-Writer: Mike Baron<br>
-Publisher: 1994 Dark Horse<br>
+<img src="Badger1.jpg"><br>
+4 issues 1983-1984 Capital, 66 issues 1985-1991 First, 11 issues 1997-1998 Image, 1994 Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Badger1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Badger10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 As any good psychologist will tell you, people with multiple personality disorders often face the personalities battling for dominance, so it only seemed appropriate that Badger actually battle with himself for your funnybook money! 
 </p><p>
 In this series, which reveals yet another never-before-revealed secret origin for Badger, Daisy Fields is an ambitious young therapist who's just been assigned to Norbert Sykes, also known as Max Swell, Emily, Pierre, Gastineau and...Badger! 
 </p><p>
 A world-class martial artist, a post-traumatic syndrome-suffering Vietnam vet, and full-blown multiple personality, Badger is the strangest and most dangerous case Daisy will ever take. If this weren't enough, Daisy's got to deal with her drug-dealing boyfriend and a mysterious campus menace known only as the Phantom! 
 </p>
+
 </body>
 </html>
