--- a/BalderTheBrave/BalderTheBrave.html
+++ b/BalderTheBrave/BalderTheBrave.html
@@ -2,21 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Balder The Brave</title>
 </head>
 
 <body>
-<h2>Balder The Brave</h2>
-<img src="BalderTheBrave1.jpg">
-<img src="BalderTheBrave2.jpg"> <br>
-<img src="BalderTheBrave3.jpg">
-<img src="BalderTheBrave4.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Sal Buscema, Walter Simonson (cover)<br>
-Writer: Walter Simonson<br>
-Publisher: 1985 Marvel<br>
+<img src="BalderTheBrave1.jpg"><br>
+4 issues 1985 Marvel <br>
+Illustrator: Sal Buscema, Walter Simonson (cover), Writer: Walter Simonson
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BalderTheBrave1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BalderTheBrave2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BalderTheBrave3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BalderTheBrave4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Balder leaves Karnilla to join Thor in battle with Hel. Story continued in Thor #360-362. 
 </p><p>
 Balder the Betrayed!, script by Walt Simonson, art by Sal Buscema; The Storm Giants capture Karnilla; Balder and Agnar follow them to Jotunheim, realm of the Giants.
