--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -9,8 +9,8 @@
 
 <body>
 <img src="NewGods001.jpg"> <br>
-Creator: Jack Kirby<br>
-Publisher: 1971 DC<br>
+19 issues 1971-1978, 6 issues 1984, 28 issues 1989-1991, 15 issues 1995-1997 by DC<br>
+Creator: Jack Kirby
 <p>
 The New Gods are a fictional race appearing in the eponymous comic book series published by DC Comics, as well as selected other DC titles. Created and designed by Jack Kirby, they first appeared in February 1971 in New Gods #1.
 </p><p>
