--- a/BakersMeetJingleBelle/BakersMeetJingleBelle.html
+++ b/BakersMeetJingleBelle/BakersMeetJingleBelle.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>The Bakers Meet Jingle Belle</h2>
 <img src="BakersMeetJingleBelle.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Kyle Baker<br>
-Writer: Paul Dini<br>
-Publisher: 2006 Dark Horse<br>
+1 issue 2006 Dark Horse<br>
+Illustrator: Kyle Baker, Writer: Paul Dini
 <p>
 When two multi-Eisner-award-winning storytellers bring their funniest creations together, the result is nothing less than pure comics magic.
 </p><p>
