--- a/kb.html
+++ b/kb.html
@@ -1852,13 +1852,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Badger: Shattered Mirror</td>
-<td>1994</td>
-<td>Dark Horse</td>
-<td><a href="Badger/Badger.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Badlands</td>
 <td>1993</td>
 <td>Dark Horse</td>
@@ -5380,6 +5373,13 @@ Creative Knowledgebase<br>
 <td>1936</td>
 <td>Creator</td>
 <td><a href="FomaJaremtschuk/FomaJaremtschuk.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Forever People</td>
+<td>1971</td>
+<td>DC</td>
+<td><a href="ForeverPeople/ForeverPeople.html">Details</a></td>
 </tr>
 
 <tr>
