--- a/BangTango/BangTango.html
+++ b/BangTango/BangTango.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="BangTango01.jpg"> <br>
-
+7 issues 2009 Vertigo (DC)
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
