Beauty and the Beast

--- a/Battletide/Battletide.html
+++ b/Battletide/Battletide.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Battletide</h2>
 <img src="Battletide.jpg"> <br>
-Series: 4 issue mini series<br>
+4 issues 1992 Marvel<br>
 Illustrator: Geoff Senior, Dell Barras (cover)<br>
-Writer: Dan Abnett, Andy Lanning<br>
-Publisher: 1992 Marvel<br>
+Writer: Dan Abnett, Andy Lanning
 <p>
 Starring Death's Head II and Killpower. Tag-team wrestling inter-galactic style! It's everyone's favorite cyborg vs. everyone's favorite assassin as Death's Head II and Killpower find themselves in a world where war is an everpresent reality. With Dark Angel, Psylocke, Motormouth, Tuck and Wolverine. 
 </p>
