--- a/BattletideII/BattletideII.html
+++ b/BattletideII/BattletideII.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-<h2>Battletide II</h2>
 <img src="BattletideII.jpg"> <br>
-Series: <br>
-Illustrator: <br>
-Writer: <br>
-Publisher:<br>
+4 issues 1993 Marvel
 <p>
 Reuniting the popular Death's Head II with the lethal Killpower. Resurged and deadlier than ever before. The Hulk guest stars. 
 </p><p>
