--- a/Beast/Beast.html
+++ b/Beast/Beast.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Beast</h2>
 <img src="Beast.jpg"> <br>
-Series: 3 issue mini series<br>
+3 issues 1997 Marvel<br>
 Illustrator: Cedric Nocon, Roger Cruz, Wellington Diaz<br>
 Writer: Keith Giffen<br>
-Publisher: 1997 Marvel<br>
 <p>
 Bad Karma: Viper decides to have her revenge against Karma by contracting Spiral to abduct her siblings and work on them in the Body Shop; Beast, Karma and Cannonball begin their search for the twins only to be assisted by Spiral. 
 </p><p>
