--- a/BeastsOfBurden/BeastsOfBurden.html
+++ b/BeastsOfBurden/BeastsOfBurden.html
@@ -7,16 +7,14 @@
 </head>
 
 <body>
-<h2>Beasts Of Burden</h2>
 <img src="BeastsOfBurden.jpg"> <br>
-Series: 4 issue mini series<br>
+4 issues 2009 by Dark Horse<br>
 Illustrator: Jill Thompson<br>
 Writer: Evan Dorkin<br>
-Publisher:<br>
 <p>
-About: Award-winning comics creators Evan Dorkin (Milk &amp; Cheese) and Jill Thompson (Scary Godmother) first introduced these heroic characters in the anthologies The Dark Horse Book of Hauntings, Witchcraft, the Dead, and Monsters, for which they won coveted Eisner Awards for Best Short Story and Best Painter. The Eisner Award-winning story gets its own series!
+Award-winning comics creators Evan Dorkin (Milk &amp; Cheese) and Jill Thompson (Scary Godmother) first introduced these heroic characters in the anthologies The Dark Horse Book of Hauntings, Witchcraft, the Dead, and Monsters, for which they won coveted Eisner Awards for Best Short Story and Best Painter. The Eisner Award-winning story gets its own series!
 </p><p>
-Story: When supernatural occurrences sweep the community of Burden Hill, it's up to a heroic gang of cats and dogs to keep residents safe from harm. A bizarre disturbance leads these four-legged neighbors on a wild-goose chase into the depths of the nearby forest, where loyalties are tested and lives come to an abrupt end. 
+When supernatural occurrences sweep the community of Burden Hill, it's up to a heroic gang of cats and dogs to keep residents safe from harm. A bizarre disturbance leads these four-legged neighbors on a wild-goose chase into the depths of the nearby forest, where loyalties are tested and lives come to an abrupt end. 
 </p>
 </body>
 </html>
