--- a/BeautyAndTheBeast/BeautyAndTheBeast.html
+++ b/BeautyAndTheBeast/BeautyAndTheBeast.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Beauty And The Beast</h2>
 <img src="BeautyAndTheBeast.jpg"> <br>
-Series: 4 issue mini series<br>
+4 issues 1984 Marvel<br>
 Illustrator: Don Perlin, Bill Sienkiewicz (cover)<br>
 Writer: Ann Nocenti<br>
-Publisher: 1984 Marvel<br>
 <p>
 Story starts in Marvel Graphic Novel #12 "Dazzler: The Movie", where she was outed as a mutant.
 </p><p>
