--- a/BeforeFantasticFour/BeforeFantasticFour.html
+++ b/BeforeFantasticFour/BeforeFantasticFour.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Before the Fantastic Four</h2>
 <img src="BeforeFantasticFour.jpg"> <br>
-Series: 3 issue mini series<br>
+3 issues 2000 Marvel<br>
 Illustrator: Kaare Andrews, Walden Wong<br>
 Writer: Larry Hama<br>
-Publisher: 2000 Marvel <br>
 <p>
 What happened when Wolverine and The Thing collided before they donned colorful costumes? This new story reveals all!
 </p><p>
